crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

typedef uint16_t sp_CompressionCode;
/**
 * A vector of bits
 */
typedef struct sp_CBitVec sp_CBitVec;
/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a `CCommand`, use a `Connection`.
 */
typedef struct sp_CCommand sp_CCommand;
/**
 * A C-wrapper for grid containing codepage 437 characters.
 *
 * The encoding is currently not enforced.
 */
typedef struct sp_CCp437Grid sp_CCp437Grid;
/**
 * A connection to the display.
 *
 * # Examples
 * ```rust
 * # use servicepoint::Command;
 * let connection = servicepoint::Connection::open("172.23.42.29:2342")
 *     .expect("connection failed");
 *  connection.send(Command::Clear)
 *     .expect("send failed");
 * ```
 */
typedef struct sp_Connection sp_Connection;
/**
 * The raw packet. Should probably not be used directly.
 */
typedef struct sp_Packet sp_Packet;
/**
 * A grid of pixels stored in packed bytes.
 */
typedef struct sp_PixelGrid sp_PixelGrid;
/**
 * Type alias for documenting the meaning of the u16 in enum values
 */
typedef size_t sp_Offset;
/**
 * Allocates a new `Command::BitmapLinearOr` instance.
 * The passed `BitVec` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `bit_vec` points to a valid instance of `BitVec`
 * - `bit_vec` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_bitmap_linear_or(sp_Offset offset,
                                                struct sp_CBitVec *bit_vec,
                                                sp_CompressionCode compression);
/**
 * Allocates a new `Command::BitmapLinearWin` instance.
 * The passed `PixelGrid` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `pixel_grid` points to a valid instance of `PixelGrid`
 * - `pixel_grid` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_bitmap_linear_win(size_t x,
                                                 size_t y,
                                                 struct sp_PixelGrid *pixel_grid,
                                                 sp_CompressionCode compression_code);
/**
 * Allocates a new `Command::BitmapLinearXor` instance.
 * The passed `BitVec` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `bit_vec` points to a valid instance of `BitVec`
 * - `bit_vec` is not used concurrently or after this call
 * - `compression` matches one of the allowed enum values
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_bitmap_linear_xor(sp_Offset offset,
                                                 struct sp_CBitVec *bit_vec,
                                                 sp_CompressionCode compression);
/**
 * Allocates a new `Command::Clear` instance.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_clear(void);
/**
 * Allocates a new `Command::Cp437Data` instance.
 * The passed `ByteGrid` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `byte_grid` points to a valid instance of `ByteGrid`
 * - `byte_grid` is not used concurrently or after this call
 * - the returned `Command` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_command_dealloc`.
 */
struct sp_CCommand *sp_command_cp437_data(size_t x,
                                          size_t y,
                                          struct sp_CCp437Grid *byte_grid);
/**
 * Deallocates a `Command`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Command`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `Packet`
 */
void sp_command_dealloc(struct sp_CCommand *ptr);
/**
 * Closes and deallocates a `Connection`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Connection`
 * - `this` is not used concurrently or after this call
 */
void sp_connection_dealloc(struct sp_Connection *ptr);
/**
 * Creates a new instance of `Connection`.
 *
 * returns: NULL if connection fails, or connected instance
 *
 * # Panics
 *
 * Bad string encoding
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_connection_dealloc`.
 */
struct sp_Connection *sp_connection_open(const char *host);
/**
 * Sends a `Packet` to the display using the `Connection`.
 * The passed `Packet` gets consumed.
 *
 * returns: true in case of success
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `connection` points to a valid instance of `Connection`
 * - `packet` points to a valid instance of `Packet`
 * - `packet` is not used concurrently or after this call
 */
bool sp_connection_send(const struct sp_Connection *connection,
                        struct sp_Packet *packet);
/**
 * Clones a `Cp437Grid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_cp437_grid_dealloc`.
 */
struct sp_CCp437Grid *sp_cp437_grid_clone(const struct sp_CCp437Grid *this_);
/**
 * Deallocates a `Cp437Grid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `Command`
 */
void sp_cp437_grid_dealloc(struct sp_CCp437Grid *this_);
/**
 * Gets the current value at the specified position.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 * - `x` and `y`: position of the cell to read
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 * - `this` is not written to concurrently
 */
uint8_t sp_cp437_grid_get(const struct sp_CCp437Grid *this_,
                          size_t x,
                          size_t y);
/**
 * Loads a `Cp437Grid` with the specified dimensions from the provided data.
 *
 * # Panics
 *
 * When the provided `data_length` is not sufficient for the `height` and `width`
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory location of at least `data_length`
 *   bytes in size.
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_cp437_grid_dealloc`.
 */
struct sp_CCp437Grid *sp_cp437_grid_load(size_t width,
                                         size_t height,
                                         const uint8_t *data,
                                         size_t data_length);
/**
 * Creates a new `Cp437Grid` with the specified dimensions.
 *
 * returns: `Cp437Grid` initialized to 0.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_cp437_grid_dealloc`.
 */
struct sp_CCp437Grid *sp_cp437_grid_new(size_t width,
                                        size_t height);