crates/servicepoint_binding_cs/ServicePoint/BindGen/ServicePoint.g.cs


        /// <summary>
        ///  Allocates a new `Command::BitmapLinearOr` instance.
        ///  The passed `BitVec` gets consumed.
        ///
        ///  Set pixel data according to an or-mask starting at the offset.
        ///
        ///  The screen will continuously overwrite more pixel data without regarding the offset, meaning
        ///  once the starting row is full, overwriting will continue on column 0.
        ///
        ///  The contained `BitVec` is always uncompressed.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `bit_vec` points to a valid instance of `BitVec`
        ///  - `bit_vec` is not used concurrently or after this call
        ///  - `compression` matches one of the allowed enum values
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_bitmap_linear_or", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_bitmap_linear_or(nuint offset, BitVec* bit_vec, CompressionCode compression);

        /// <summary>
        ///  Allocates a new `Command::BitmapLinearXor` instance.
        ///  The passed `BitVec` gets consumed.
        ///
        ///  Set pixel data according to a xor-mask starting at the offset.
        ///
        ///  The screen will continuously overwrite more pixel data without regarding the offset, meaning
        ///  once the starting row is full, overwriting will continue on column 0.
        ///
        ///  The contained `BitVec` is always uncompressed.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `bit_vec` points to a valid instance of `BitVec`
        ///  - `bit_vec` is not used concurrently or after this call
        ///  - `compression` matches one of the allowed enum values
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_bitmap_linear_xor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_bitmap_linear_xor(nuint offset, BitVec* bit_vec, CompressionCode compression);

        /// <summary>
        ///  Allocates a new `Command::Cp437Data` instance.
        ///  The passed `ByteGrid` gets consumed.
        ///
        ///  Show text on the screen.
        ///
        ///  &lt;div class="warning"&gt;
        ///      The library does not currently convert between UTF-8 and CP-437.
        ///      Because Rust expects UTF-8 strings, it might be necessary to only send ASCII for now.
        ///  &lt;/div&gt;
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `byte_grid` points to a valid instance of `ByteGrid`
        ///  - `byte_grid` is not used concurrently or after this call
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_cp437_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_cp437_data(nuint x, nuint y, Cp437Grid* byte_grid);

        /// <summary>
        ///  Allocates a new `Command::BitmapLinearWin` instance.
        ///  The passed `PixelGrid` gets consumed.
        ///
        ///  Sets a window of pixels to the specified values
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `pixel_grid` points to a valid instance of `PixelGrid`
        ///  - `pixel_grid` is not used concurrently or after this call
        ///  - `compression` matches one of the allowed enum values
        ///  - the returned `Command` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_command_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_bitmap_linear_win", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Command* sp_command_bitmap_linear_win(nuint x, nuint y, PixelGrid* pixel_grid, CompressionCode compression_code);

        /// <summary>
        ///  Deallocates a `Command`.
        ///
        ///  # Examples
        ///
        ///  ```C
        ///  SPCommand c = sp_command_clear();
        ///  sp_command_dealloc(c);
        ///  ```
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Command`
        ///  - `this` is not used concurrently or after this call
        ///  - `this` was not passed to another consuming function, e.g. to create a `Packet`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_command_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_command_dealloc(Command* ptr);

        /// <summary>
        ///  Creates a new instance of `Connection`.
        ///
        ///  returns: NULL if connection fails, or connected instance
        ///
        ///  # Panics
        ///
        ///  Bad string encoding
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_connection_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_connection_open", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Connection* sp_connection_open(byte* host);

        /// <summary>
        ///  Sends a `Packet` to the display using the `Connection`.
        ///  The passed `Packet` gets consumed.
        ///
        ///  returns: true in case of success
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `connection` points to a valid instance of `Connection`
        ///  - `packet` points to a valid instance of `Packet`
        ///  - `packet` is not used concurrently or after this call
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_connection_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool sp_connection_send(Connection* connection, Packet* packet);

        /// <summary>
        ///  Closes and deallocates a `Connection`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Connection`
        ///  - `this` is not used concurrently or after this call
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_connection_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_connection_dealloc(Connection* ptr);

        /// <summary>
        ///  Creates a new `Cp437Grid` with the specified dimensions.
        ///
        ///  returns: `Cp437Grid` initialized to 0.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_cp437_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Cp437Grid* sp_cp437_grid_new(nuint width, nuint height);

        /// <summary>
        ///  Loads a `Cp437Grid` with the specified dimensions from the provided data.
        ///
        ///  # Panics
        ///
        ///  When the provided `data_length` is not sufficient for the `height` and `width`
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `data` points to a valid memory location of at least `data_length`
        ///    bytes in size.
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_cp437_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Cp437Grid* sp_cp437_grid_load(nuint width, nuint height, byte* data, nuint data_length);

        /// <summary>
        ///  Clones a `Cp437Grid`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        ///  - `this` is not written to concurrently
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_cp437_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Cp437Grid* sp_cp437_grid_clone(Cp437Grid* @this);

        /// <summary>
        ///  Deallocates a `Cp437Grid`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        ///  - `this` is not used concurrently or after this call
        ///  - `this` was not passed to another consuming function, e.g. to create a `Command`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_cp437_grid_dealloc(Cp437Grid* @this);

        /// <summary>
        ///  Gets the current value at the specified position.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///  - `x` and `y`: position of the cell to read
        ///
        ///  # Panics
        ///
        ///  When accessing `x` or `y` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        ///  - `this` is not written to concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte sp_cp437_grid_get(Cp437Grid* @this, nuint x, nuint y);
